# core-framework

./: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  extensions.py  main.py
backend/app/agents/: __init__.py  assumption_tester.py  base.py  (+11 more)
backend/scripts/: migrate_discoveries_to_synthesis.py
backend/tests/: conftest.py  test_agents.py  test_ai_feedback.py  test_ai_feedback_helper.py  test_artifact_thread_model.py  test_artifact_threads_router.py  test_audit.py  test_compass.py  test_connectors.py  test_detectors.py  test_discovery.py  test_dt_templates.py  test_engagement_context_model.py  test_engagement_context_router.py  test_engagements.py  test_evidence.py  test_export.py  test_extensions.py  test_file_extract.py  test_github_auth.py  test_health.py  test_image_providers.py  test_ingest_write_sanitization.py  test_insights.py  test_insights_activity.py  test_insights_decisions.py  test_insights_inbox.py  test_insights_search.py  test_insights_stakeholders.py  test_local_docs_allowlist.py  test_migrate_discoveries.py  test_narrative.py  test_partitioning.py  test_project_context.py  test_project_paths.py  test_projects.py  test_questions.py  test_realtime.py  test_references.py  test_repo_source.py  (+19 more)
(+505 files in other folders)
